:nail_care: Fix main menu bottom items alignment on XL breakpoint

--- a/src/components/mainMenu/mainMenu.css
+++ b/src/components/mainMenu/mainMenu.css
@@ -239,6 +239,7 @@
       display: flex;
       flex-direction: row;
       align-items: flex-start;
+      transition: all ease 300ms;
       margin-left: 10px;
     }
 
@@ -338,5 +339,15 @@
     width: 100%;
     bottom: 0;
     height: 5px;
+  }
+}
+
+@media (--xLarge-viewport) {
+  .bottomTabs {
+    & .label {
+      & > div {
+        margin-left: 20px;
+      }
+    }
   }
 }
